--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,10 @@
 			body {
 				padding-top: 70px;
 			}
+            .fenxi {
+
+                width: 100%;
+            }
 		</style>
 	</head>
 
@@ -41,7 +45,7 @@
 								<input type="text" class="form-control" name="password" placeholder="密码">
 
 							</div>
-							<button class="btn btn-default submit" >登录</button>
+							<button class="btn btn-info submit" >登录</button>
 						</form>
 						<li>
 							<a href="./register.html">注册</a>
@@ -57,10 +61,7 @@
 			<div class="home_content">
 				<div class="jumbotron">
 					<h1>欢迎来到佛系租房!</h1>
-					<p>由于我们的技术人员其实什么也不会写，我们的技术人员对未来看不到一点希望，所以只能写这么一个瓜皮页面。但是————你可以先按照你喜欢的规则预览一下部分房屋信息。</p>
-					<p>
-						<a class="btn btn-primary btn-lg" href="api/" role="button">点击此处当场去世</a>
-					</p>
+					<p></p>
 				</div>
 
 				<h1>----我可以在这里干什么？</h1>
@@ -68,29 +69,34 @@
 				<div class="row">
 					<div class="col-md-4">
 						<h2>查找心仪的房子</h2>
-						<p>在导航栏的条件筛选组件中输入你理想的规则，网站将为你展示符合你条件的房屋。</p>
+						<p>你可以在导航中转到搜索页面，根据指定的条件搜索房屋的信息。根据你选择的信息，网站将根据城市为你做出分析与参考。</p>
 						<p>
-							<a class="btn btn-default" href="/api/test/" role="button">点击此处当场去世 &raquo;</a>
+							<a class="btn btn-info btn-lg" href="/api/test/" role="button">点击此处当场去世 &raquo;</a>
 						</p>
 					</div>
 					<div class="col-md-4">
 						<h2>在同城论坛交流</h2>
-						<p>你可以选择进入一个城市的论坛，与其他的用户交流探讨租房经验或者与他人合租。如果你运气好碰到心仪的另一半我们会有一句MMP要讲。</p>
+						<p>你可以选择进入一个城市的论坛，与其他的用户交流探讨租房经验或寻求合租的租客。你也可以在这里与他人分享你此刻的心情。</p>
 						<p>
-							<a class="btn btn-default" href="{% url 'app:blog' %}" role="button">点击此处当场去世 &raquo;</a>
+							<a class="btn btn-info btn-lg" href="{% url 'app:blog' %}" role="button">点击此处当场去世 &raquo;</a>
 						</p>
 					</div>
 					<div class="col-md-4">
 						<h2>预览全国的概况</h2>
-						<p>你可以在这里预览房价的分布情况，例如房价最高的几个城市，房价最集中的区间等。</p>
+						<p>你可以在这里直观的了解一些数据，此处以下统计图是根据所有的房屋信息按一定规则做出的分析。</p>
 						<p>
-							<a class="btn btn-default" href="#" role="button">点击此处当场去世 &raquo;</a>
+							<a class="btn btn-info btn-lg" href="#" role="button">点击此处当场去世 &raquo;</a>
 						</p>
 					</div>
 				</div>
 			</div>
+            <hr>
+
+            <div class="fenxi"></div>
 		</div>
 		<!-- /container -->
+
+
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
@@ -124,6 +130,8 @@
 						}
 					}
 				})
+
+                $('.fenxi').load('./high_low1.html')
 
 			})
 
