--- a/www/search.html
+++ b/www/search.html
@@ -22,11 +22,22 @@
         #infobox {
             display: none;
             position: fixed;
-            left: 30%;
-            top: 30%;
+            margin:auto;
+            left:0;
+            right:0;
+            top:80px;
+
             width: 490px;
-            height: 500px;
             text-align: center;
+        }
+
+        .panel-body {
+            height: 500px;
+            overflow: auto;
+        }
+
+        .info_close {
+            margin: 10px;
         }
 
     </style>
@@ -49,7 +60,7 @@
                     <a href="#about">&nbsp;&nbsp;&nbsp;论坛&nbsp;&nbsp;&nbsp;</a>
                 </li>
                 <li class="active">
-                    <a href="#">&nbsp;&nbsp;&nbsp;搜索&nbsp;&nbsp;&nbsp;</a>
+                    <a href="search.html">&nbsp;&nbsp;&nbsp;搜索&nbsp;&nbsp;&nbsp;</a>
                 </li>
 
                 <ul class="nav navbar-nav">
@@ -62,7 +73,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" id="region_tag" data-toggle="dropdown" role="button"
-                           aria-haspopup="true" aria-expanded="false">区域 <span class="caret"></span></a>
+                           aria-haspopup="true" aria-expanded="false">全部区域 <span class="caret"></span></a>
                         <ul class="dropdown-menu region">
                             <li>
                                 <a href="#" class="choose_region">先选择城市！</a>
@@ -276,14 +287,14 @@
                     $div.appendTo($('.context'))
                 }
 
-                $('.firstpage').remove()
+                $('.page_tag').remove()
                 for (i = 1; i <= data.pagenum; i++) {
                     if (i == 1) {
-                        $('.next_page').before('<li class="active firstpage"><a href="#" onclick="choose_page(this)">' + i.toString() + '</a></li>')
+                        $('.next_page').before('<li class="active page_tag"><a href="#" onclick="choose_page(this)">' + i.toString() + '</a></li>')
 
                     }
                     else {
-                        $('.next_page').before('<li><a href="#" onclick="choose_page(this)">' + i.toString() + '</a></li>')
+                        $('.next_page').before('<li class="page_tag"><a href="#" onclick="choose_page(this)">' + i.toString() + '</a></li>')
                     }
                 }
 
@@ -302,6 +313,7 @@
         }, function (data) {
             var regions_list = data.regions_list
             $('.region').empty()
+            $('.region').append('<li><a href="#" class="choose_region" onclick="choose_r(this)">全部区域</a></li>')
             for (i = 0; i < regions_list.length; i++) {
                 var $li = $('<li><a href="#" class="choose_region" onclick="choose_r(this)">' + regions_list[i] + '</a></li>')
 
@@ -402,8 +414,8 @@
                 '        <p>房屋类型：' + data.hometype + '</p>\n' +
                 '        <p>房东姓名：' + data.linkman + '</p>\n' +
                 '        <p>联系电话：' + data.phone + '</p>\n' +
-                '        <p>房东描述：' + data.features + '</p>\n' +
-                '<button class="btn btn-default btn-lg" onclick="closeinfo()">关闭</button>\n' +
+                '        <p>房东描述：' + data.features + '</p></div>\n' +
+                '<button class="btn btn-default btn-lg info_close" onclick="closeinfo()">关闭</button>\n' +
                 '</div>'
             )
         })
