--- a/www/search.html
+++ b/www/search.html
@@ -57,7 +57,7 @@
                     <a href="index.html">&nbsp;&nbsp;&nbsp;首页&nbsp;&nbsp;&nbsp;</a>
                 </li>
                 <li>
-                    <a href="#about">&nbsp;&nbsp;&nbsp;论坛&nbsp;&nbsp;&nbsp;</a>
+                    <a href="#">&nbsp;&nbsp;&nbsp;论坛&nbsp;&nbsp;&nbsp;</a>
                 </li>
                 <li class="active">
                     <a href="search.html">&nbsp;&nbsp;&nbsp;搜索&nbsp;&nbsp;&nbsp;</a>
@@ -417,7 +417,7 @@
                 '        <p>房东描述：' + data.features + '</p></div>\n' +
                 '<button class="btn btn-default btn-lg info_close" onclick="closeinfo()">关闭</button>\n' +
                 '</div>'
-            )
+            )00
         })
         $('#infobox').css("display", "block")
     }
